--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -39,5 +39,5 @@ jobs:
       with:
       # Artifact name
         name:  ${{ env.EXE_NAME }}
-      # A file, directory or wildcard pattern that describes what to upload (ik its shit..)
+      # A file, directory or wildcard pattern that describes what to upload (ik its shit.)
         path: x64\${{ env.RELEASE_DIR }}\${{ env.EXE_NAME }}
