--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -15,25 +15,20 @@ jobs:
       matrix:
         configuration: [Release]
     runs-on: windows-latest
+    env:
+      SOLUTION_FILE_PATH: src/MicaForEveryone.sln  # Correct path to the solution file
+      VERSION: 2.1.1  # Correct version from AssemblyInfo.cs and GitHub releases
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Extract version from AssemblyInfo.cs
-      id: extract_version
-      shell: pwsh
-      run: |
-        $version = (Select-String -Path "src/Properties/AssemblyInfo.cs" -Pattern 'AssemblyVersion\("([0-9]+\.[0-9]+\.[0-9]+)' | % { $_.Matches.Groups[1].Value })
-        echo "VERSION=$version" >> $env:GITHUB_ENV
-        echo "Extracted version: $version"
 
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v2
 
     - name: Restore NuGet packages
       working-directory: ${{ github.workspace }}  # Set working directory to repo root
-      run: msbuild /t:Restore "src/MicaForEveryone.sln"
+      run: msbuild /t:Restore "${{ env.SOLUTION_FILE_PATH }}"
 
     - name: Build solution (x64)
       working-directory: ${{ github.workspace }}  # Set working directory to repo root
@@ -42,7 +37,7 @@ jobs:
                 /p:Configuration=${{ matrix.configuration }} `
                 /p:Platform="x64" `
                 /p:OutputPath="bin\x64\${{ matrix.configuration }}" `
-                "src/MicaForEveryone.sln"
+                "${{ env.SOLUTION_FILE_PATH }}"
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
