--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -15,9 +15,6 @@ jobs:
       matrix:
         configuration: [Release]
     runs-on: windows-latest
-    env:
-      SOLUTION_FILE_PATH: src/MicaForEveryone.sln  # Correct path to the solution file
-      VERSION: 2.1.1  # Correct version from AssemblyInfo.cs and GitHub releases
 
     steps:
     - name: Checkout code
@@ -27,20 +24,20 @@ jobs:
       uses: microsoft/setup-msbuild@v2
 
     - name: Restore NuGet packages
-      working-directory: ${{ github.workspace }}  # Set working directory to repo root
-      run: msbuild /t:Restore "${{ env.SOLUTION_FILE_PATH }}"
+      working-directory: ${{ github.workspace }}/src  # Set working directory to src folder
+      run: msbuild /t:Restore "MicaForEveryone.sln"
 
     - name: Build solution (x64)
-      working-directory: ${{ github.workspace }}  # Set working directory to repo root
+      working-directory: ${{ github.workspace }}/src  # Set working directory to src folder
       run: |
         msbuild /m `
                 /p:Configuration=${{ matrix.configuration }} `
                 /p:Platform="x64" `
                 /p:OutputPath="bin\x64\${{ matrix.configuration }}" `
-                "${{ env.SOLUTION_FILE_PATH }}"
+                "MicaForEveryone.sln"
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: MicaForEveryone-${{ env.VERSION }}-x64-${{ matrix.configuration }}
+        name: MicaForEveryone-x64-${{ matrix.configuration }}
         path: src/bin/x64/${{ matrix.configuration }}/MicaForEveryone.exe
