--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -2,9 +2,9 @@ name: MicaForEveryone
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
 
 permissions:
   contents: read
@@ -14,35 +14,30 @@ jobs:
     strategy:
       matrix:
         configuration: [Release]
+        platform: [x64, x86]
     runs-on: windows-latest
     env:
-      SOLUTION_FILE_PATH: src/MicaForEveryone.sln  # Explicit path to the solution file
+      SOLUTION_FILE_PATH: .
       RELEASE_DIR: ${{ matrix.configuration }}
-      EXE_NAME: MicaForEveryone-x64-${{ matrix.configuration }}.exe
-      BEXE_NAME: MicaForEveryone-x64-${{ matrix.configuration }}
+      EXE_NAME: MicaForEveryone-${{ matrix.platform }}-${{ matrix.configuration }}.exe
+      BEXE_NAME: MicaForEveryone-${{ matrix.platform }}-${{ matrix.configuration }}
+      ARCH: ${{ matrix.platform }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Debug - List repository files
-      shell: pwsh
-      run: Get-ChildItem -Recurse -File
+    - uses: actions/checkout@v3
 
     - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v2
+      uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Build (x64)
-      working-directory: ${{ env.GITHUB_WORKSPACE }}
-      run: |
-        msbuild /m `
-                /p:Configuration=${{ matrix.configuration }} `
-                /p:Platform=x64 `
-                /p:OutputPath=bin\x64\${{ matrix.configuration }} `
-                ${{ env.SOLUTION_FILE_PATH }}
-
+    - name: Build
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      # Add additional options to the MSBuild command line here (like platform or verbosity level).
+      # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
+      run: msbuild /m /p:Configuration=${{ matrix.configuration }} /p:ReleaseDirectory=..\$env:RELEASE_DIR /p:TargetName=${{ env.BEXE_NAME }} ${{env.SOLUTION_FILE_PATH}}
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ env.EXE_NAME }}
-        path: bin\x64\${{ matrix.configuration }}\${{ env.EXE_NAME }}
+      # Artifact name
+        name:  ${{ env.EXE_NAME }}
+      # A file, directory or wildcard pattern that describes what to upload (ik its shit)
+        path: x64\${{ env.RELEASE_DIR }}\${{ env.EXE_NAME }}
