--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -1,4 +1,3 @@
-
 name: MicaForEveryone
 
 on:
@@ -30,14 +29,14 @@ jobs:
       shell: pwsh
       run: Get-ChildItem -Recurse -File
 
-    - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v2
-
-    - name: Install Windows SDK and ATL
+    - name: Install Visual Studio Build Tools with ATL
       shell: pwsh
       run: |
-        # Install the required Visual Studio components
-        choco install visualstudio2022-workload-vctools --package-parameters "--add Microsoft.VisualStudio.Component.VC.ATL" --yes --no-progress
+        # Install Visual Studio Build Tools with ATL and Windows SDK
+        choco install visualstudio2022-workload-vctools --package-parameters "--add Microsoft.VisualStudio.Component.VC.ATL --add Microsoft.VisualStudio.Component.Windows10SDK" --yes --no-progress
+
+    - name: Add MSBuild to PATH
+      uses: microsoft/setup-msbuild@v2
 
     - name: Build (x64)
       working-directory: ${{ github.workspace }}  # Set working directory to repo root
