--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -11,42 +11,28 @@ permissions:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        configuration: [Release]
-    runs-on: windows-latest
+    runs-on: windows-2019  # Matches the original workflow's environment
     env:
       SOLUTION_FILE_PATH: MicaForEveryone.sln
-      RELEASE_DIR: ${{ matrix.configuration }}
-      EXE_NAME: MicaForEveryone-x64-${{ matrix.configuration }}.exe
-      BEXE_NAME: MicaForEveryone-x64-${{ matrix.configuration }}
+      CONFIGURATION: Release
+      PLATFORM: x64
+      OUTPUT_DIR: bin\x64\Release
+      EXE_NAME: MicaForEveryone-x64-Release.exe
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
 
-    - name: Debug - List repository files
-      shell: pwsh
-      run: Get-ChildItem -Recurse -File
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Install Visual Studio 2019 Build Tools with ATL
-      shell: pwsh
-      run: |
-        choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Component.VC.v142.x86.x64 --add Microsoft.VisualStudio.Component.VC.ATL --add Microsoft.VisualStudio.Component.Windows10SDK" --yes --no-progress
-
-    - name: Verify Installed Components
+    - name: Install Dependencies (v142 Toolset & SDK)
       shell: pwsh
       run: |
-        & "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -products * -requires Microsoft.Component.MSBuild -property installationPath
-
-    - name: Check Installed Include Files
-      shell: pwsh
-      run: |
-        $includePath = "C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\VC\Tools\MSVC"
-        Get-ChildItem -Recurse -Path $includePath -Include "atlstr.h", "atl*"
-
-    - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v2
+        choco install visualstudio2019buildtools --package-parameters `
+          "--add Microsoft.VisualStudio.Component.VC.v142.x86.x64 `
+          --add Microsoft.VisualStudio.Component.Windows10SDK `
+          --add Microsoft.VisualStudio.Component.VC.ATL" -y --no-progress
 
     - name: Verify ATL Headers
       shell: pwsh
@@ -58,20 +44,19 @@ jobs:
         }
         Write-Output "ATL headers found at $atlPath"
 
-    - name: Build (x64)
-      working-directory: ${{ github.workspace }}
+    - name: Build Solution
       run: |
-        msbuild /m ` 
-                /p:Configuration=${{ matrix.configuration }} ` 
-                /p:Platform=x64 ` 
-                /p:PlatformToolset=v142 ` 
-                /p:OutputPath=bin\x64\${{ matrix.configuration }} ` 
-                "${{ env.SOLUTION_FILE_PATH }}"
+        msbuild ${{ env.SOLUTION_FILE_PATH }} /m ^
+          /p:Configuration=${{ env.CONFIGURATION }} ^
+          /p:Platform=${{ env.PLATFORM }} ^
+          /p:PlatformToolset=v142 ^
+          /p:OutputPath=${{ env.OUTPUT_DIR }}
 
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v3
       with:
         name: ${{ env.EXE_NAME }}
-        path: bin\x64\${{ matrix.configuration }}\${{ env.EXE_NAME }}
+        path: ${{ env.OUTPUT_DIR }}\MicaForEveryone.exe
+
 
 
